data/derived/comb/progs/unify/prog4485.ml.out
Characters 148-149:
  List.fold_left f base l;;
                 ^
Error: This expression has type string -> string -> 'a -> string
       but an expression was expected of type string -> string -> string
       Type 'a -> string is not compatible with type string 
